--- a/appEpi/templates/colaboradores/listar.html
+++ b/appEpi/templates/colaboradores/listar.html
@@ -3,9 +3,10 @@
 <head><title>Colaboradores</title></head>
 <body>
     <h1>Colaboradores</h1>
-    <a href="{% url 'dashboard' %}">Dashboard</a> | 
+    
     <a href="{% url 'cadastrar_colaborador' %}">Cadastrar Colaborador</a> | 
     <a href="{% url 'logout' %}">Sair</a>
+    <a href="{% url 'home' %}" class="btn btn-secondary mt-3">← Voltar</a>
 
     <table border="1">
         <tr>
