--- a/appEpi/templates/colaboradores/excluir.html
+++ b/appEpi/templates/colaboradores/excluir.html
@@ -8,6 +8,8 @@
         {% csrf_token %}
         <button type="submit">Confirmar Exclusão</button>
         <a href="{% url 'listar_colaboradores' %}">Cancelar</a>
+        <a href="{% url 'home' %}" class="btn btn-secondary mt-3">← Voltar</a>
+
     </form>
 </body>
 </html>
