--- a/appEpi/templates/epis/listar.html
+++ b/appEpi/templates/epis/listar.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h2>Lista de EPIs</h2>
 <a href="{% url 'cadastrar_epi' %}">+ Novo EPI</a>
+<a href="{% url 'home' %}" class="btn btn-secondary mt-3">← Voltar</a>
+
 <table border="1">
     <tr>
         <th>ID</th>
@@ -22,6 +24,7 @@
         <td>
             <a href="{% url 'editar_epi' epi.id %}">Editar</a> |
             <a href="{% url 'excluir_epi' epi.id %}">Excluir</a>
+            
         </td>
     </tr>
     {% empty %}
