--- a/appEpi/templates/base.html
+++ b/appEpi/templates/base.html
@@ -1,42 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+{% load static %}
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}Gerenciamento de EPIs{% endblock %}</title>
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<meta charset="UTF-8">
+<title>{% block title %}Gerenciamento de EPIs{% endblock %}</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
-<body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
-        <a class="navbar-brand" href="{% url 'home' %}">Dashboard</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="{% url 'listar_colaboradores' %}">Colaboradores</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'listar_epis' %}">EPIs</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'listar_emprestimos' %}">Empréstimos</a></li>
-            </ul>
-            <ul class="navbar-nav">
-                {% if user.is_authenticated %}
-                    <li class="nav-item"><a class="nav-link" href="#">{{ user.username }}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Sair</a></li>
-                {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-
-    <!-- Container principal -->
-    <div class="container mt-4">
-        {% block content %}
-        {% endblock %}
-    </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<body class="bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3 shadow">
+<a class="navbar-brand" href="{% url 'home' %}">Dashboard</a>
+<div class="collapse navbar-collapse">
+<ul class="navbar-nav me-auto">
+<li class="nav-item"><a class="nav-link" href="{% url 'listar_colaboradores' %}">Colaboradores</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'listar_epis' %}">EPIs</a></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'listar_emprestimos' %}">Empréstimos</a></li>
+</ul>
+<ul class="navbar-nav">
+{% if user.is_authenticated %}
+<li class="nav-item"><span class="nav-link">Olá, {{ user.username }}</span></li>
+<li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Sair</a></li>
+{% endif %}
+</ul>
+</div>
+</nav>
+<div class="container my-4">
+{% block content %}{% endblock %}
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
