--- a/appEpi/templates/colaboradores/cadastrar.html
+++ b/appEpi/templates/colaboradores/cadastrar.html
@@ -1,3 +1,6 @@
+{% extends 'base.html' %}
+{% block content %}
+
 <!DOCTYPE html>
 <html>
 <head><title>Cadastrar Colaborador</title></head>
@@ -5,11 +8,24 @@
     <h1>Cadastrar Colaborador</h1>
     <a href="{% url 'listar_colaboradores' %}">Voltar</a>
     <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Salvar</button>
-        <a href="{% url 'home' %}" class="btn btn-secondary mt-3">← Voltar</a>
+    {% csrf_token %}
 
-    </form>
+    <label for="{{ form.nome.id_for_label }}">Nome:</label>
+    {{ form.nome }}
+
+    <label for="{{ form.cpf.id_for_label }}">CPF:</label>
+    {{ form.cpf }}
+
+    <label for="{{ form.funcao.id_for_label }}">Função:</label>
+    {{ form.funcao }}
+
+    <label for="{{ form.setor.id_for_label }}">Setor:</label>
+    {{ form.setor }}
+
+    <button type="submit">Salvar</button>
+</form>
+
 </body>
 </html>
+{% endblock %}
+
