--- a/appEpi/templates/home.html
+++ b/appEpi/templates/home.html
@@ -15,14 +15,15 @@
     </div>
 
     <!-- Card EPIs Disponíveis -->
-    <div class="col-md-4">
-        <div class="card text-white bg-success shadow mb-3 rounded-3">
-            <div class="card-body text-center">
-                <h5 class="card-title">EPIs Disponíveis</h5>
-                <p class="card-text fs-3 fw-bold">{{ total_epis }}</p>
-            </div>
+<div class="col-md-4">
+    <div class="card text-white bg-success shadow mb-3 rounded-3">
+        <div class="card-body text-center">
+            <h5 class="card-title">EPIs Disponíveis</h5>
+            <p class="card-text fs-3 fw-bold">{{ total_epis_disponiveis }}</p>
         </div>
     </div>
+</div>
+
 
     <!-- Novo Card: EPIs em Uso -->
     <div class="col-md-4">
